--- a/index.html
+++ b/index.html
@@ -1,9 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-<h1> Hello this is Revanth </h1>
-</body>
 
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+  <div class="card" style="width:300px">
+    <img class="card-img-top" src="img_avatar1.png" alt="Card image" style="width:100%">
+    <div class="card-body">
+      <h4 class="card-title">Revanth Vermareddy</h4>
+      <p class="card-text">Executive Graduate Trainee at Fidelity Investments</p>
+      <a href="#" class="btn btn-primary">See Profile</a>
+    </div>
+  </div>
+  <br><br>  
+
+  <button type="button" class="btn btn-primary">
+    Viewed by <span class="badge badge-light">4</span>
+  </button>
+  <br><br>
+  
+  <p>This is some text.</p>
+  
+  
+  
+  </div>
+  
+</div>
+
+</body>
 </html>
