--- a/index.html
+++ b/index.html
@@ -10,30 +10,157 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-
-<div class="jumbotron jumbotron-fluid">
+<!-- Jumbotron Starts -->
+<div class="jumbotron jumbotron-fluid" style="margin-bottom:0">
   <div class="container">
   <div class="card" style="width:300px">
-    <img class="card-img-top" src="Untitled-2.jpg" alt="Card image" style="width:100%">
+    <img class="card-img-top" src="img_avatar1.png" alt="Card image" style="width:100%">
     <div class="card-body">
       <h4 class="card-title">Revanth Vermareddy</h4>
       <p class="card-text">Executive Graduate Trainee at Fidelity Investments</p>
-      <a href="#" class="btn btn-primary">See Profile</a>
+      <a href="#" class="btn btn-primary">Resume</a>
     </div>
   </div>
   <br><br>  
 
   <button type="button" class="btn btn-primary">
-    Viewed by <span class="badge badge-light">4</span>
+    Profile Viewed by <span class="badge badge-light">4</span>
   </button>
   <br><br>
   
-  <p>This is some text.</p>
-  
-  
+  <h4>Contact Details</h4>
+  <p>Mobile: +91 7075987720</p>
   
   </div>
   
+</div>
+<!-- Jumbotron Ends -->
+<div class="container">
+<br>
+<h3>Academic Details</h3>
+<div class="table-responsive-sm"> 
+<table class="table">
+    <thead class="thead-dark">
+      <tr>
+        <th>Education</th>
+        <th>Institute</th>
+        <th>Location</th>
+        <th>Year</th>
+        <th>CPI%</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>B.Tech (ECE)</td>
+        <td>NIT Warangal</td>
+        <td>Warangal</td>
+        <td>2015-2019</td>
+        <td>7.25</td>
+      </tr>
+      <tr>
+        <td>Intermediate</td>
+        <td>Narayana Jr. College</td>
+        <td>Hyderabad</td>
+        <td>2013-2015</td>
+        <td>98.0%</td>
+      </tr>
+      <tr>
+        <td>SSC</td>
+        <td>New Vision The Olympiad School</td>
+        <td>Khammam</td>
+        <td>2013</td>
+        <td>9.7</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+<br>
+
+<h3>Career Objective</h3>
+<p>
+Looking for an opportunity to acquire knowledge through the work I do
+and use my skills for both organizational and individual development by
+integrating and applying knowledge gained through education and vision.
+To work intensively in a challenging ambience with honesty, sincerity and integrity.
+</p>
+
+<!-- Tab Starts -->
+  
+  <br>
+  <!-- Nav tabs -->
+  <ul class="nav nav-tabs">
+    <li class="nav-item">
+      <a class="nav-link active" data-toggle="tab" href="#foi"><h6>Fields of Intrest</h6></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" href="#ts"><h6>Technical Skills</h6></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" href="#aa"><h6>Academic Achievements</h6></a>
+    </li>
+  </ul>
+
+  <!-- Tab panes -->
+  <div class="tab-content">
+    <div id="foi" class="container tab-pane active"><br>
+      <h5>Fields of Intrest</h5>
+      <p>- Web Development<br>
+         - App Development</p>
+    </div>
+    <div id="ts" class="container tab-pane fade"><br>
+      <h5>Programming Languages</h5>   
+      <div class="progress" style="height:20px">
+        <div class="progress-bar" style="width:90%;height:20px"><strong>JAVA</strong></div>
+      </div>
+      <br>
+      <div class="progress" style="height:20px">
+        <div class="progress-bar" style="width:70%;height:20px"><strong>Python</strong></div>
+      </div>
+      <br>
+      <div class="progress" style="height:20px">
+        <div class="progress-bar" style="width:70%;height:20px"><strong>C++</strong></div>
+      </div>
+      <br>
+      <h5>Java Technologies</h5>   
+      <div class="progress" style="height:20px">
+        <div class="progress-bar" style="width:90%;height:20px"><strong>Servlets</strong></div>
+      </div>
+      <br>
+      <div class="progress" style="height:20px">
+        <div class="progress-bar" style="width:70%;height:20px"><strong>JDBC</strong></div>
+      </div>
+      <br>
+      <div class="progress" style="height:20px">
+        <div class="progress-bar" style="width:70%;height:20px"><strong>JSP</strong></div>
+      </div>
+      <br>
+      <h5>Web Frameworks</h5>   
+      <div class="progress" style="height:20px">
+        <div class="progress-bar" style="width:80%;height:20px"><strong>Bootstrap</strong></div>
+      </div>
+      <br>
+      <h5>Mark-Up Languages</h5>   
+      <div class="progress" style="height:20px">
+        <div class="progress-bar" style="width:90%;height:20px"><strong>HTML 5</strong></div>
+      </div>
+      <br>
+      <div class="progress" style="height:20px">
+        <div class="progress-bar" style="width:60%;height:20px"><strong>CSS</strong></div>
+      </div>
+      <br>
+    </div>
+    <div id="aa" class="container tab-pane fade"><br>
+      <h3>Academic Achievements</h3>
+      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+    </div>
+  </div>
+
+<!-- Tab Ends -->
+
+</div>
+
+<div class="jumbotron text-center" style="margin-bottom:0">
+  <p>Footer</p>
 </div>
 
 </body>
