--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="jumbotron jumbotron-fluid" style="margin-bottom:0">
   <div class="container">
   <div class="card" style="width:300px">
-    <img class="card-img-top" src="img_avatar1.png" alt="Card image" style="width:100%">
+    <img class="card-img-top" src="Untitled-2.jpg" alt="Card image" style="width:100%">
     <div class="card-body">
       <h4 class="card-title">Revanth Vermareddy</h4>
       <p class="card-text">Executive Graduate Trainee at Fidelity Investments</p>
