--- a/index.html
+++ b/index.html
@@ -1,15 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Revanth Portfolio</title>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
+
+<!-- Header Start -->
+<header>
+  <div class="bg-dark collapse show" id="navbarHeader" style="">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-8 col-md-7 py-4">
+          <h4 class="text-white">About</h4>
+          <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
+        </div>
+        <div class="col-sm-4 offset-md-1 py-4">
+          <h4 class="text-white">Contact</h4>
+          <ul class="list-unstyled">
+            <li><a href="https://www.twitter.com/RevanthVerma007" class="text-white">Twitter</a></li>
+            <li><a href="https://www.facebook.com/verma.rev" class="text-white">Facebook</a></li>
+            <li><a href="https://www.linkedin.com/in/vermareddyrevanth" class="text-white">Linkedin</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="navbar navbar-dark bg-dark shadow-sm">
+    <div class="container d-flex justify-content-between">
+      <a href="#" class="navbar-brand d-flex align-items-center">
+        <strong>Revanth Vermareddy</strong>
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="true" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </div>
+  </div>
+</header>
+<!-- Header End -->
+
 <!-- Jumbotron Starts -->
 <div class="jumbotron jumbotron-fluid" style="margin-bottom:0">
   <div class="container">
@@ -148,10 +183,36 @@ To work intensively in a challenging ambience with honesty, sincerity and integr
         <div class="progress-bar" style="width:60%;height:20px"><strong>CSS</strong></div>
       </div>
       <br>
+      <h5>Database</h5>   
+      <div class="progress" style="height:20px">
+        <div class="progress-bar" style="width:90%;height:20px"><strong>Oracle (SQL, PL/SQL)</strong></div>
+      </div>
+      <br>
+      <h5>Cloud Services</h5>   
+      <div class="progress" style="height:20px">
+        <div class="progress-bar" style="width:90%;height:20px"><strong>AWS</strong></div>
+      </div>
+      <br>
+      <div class="progress" style="height:20px">
+        <div class="progress-bar" style="width:90%;height:20px"><strong>GCP</strong></div>
+      </div>
+      <br>
+      <h5>Web/App Services</h5>   
+      <div class="progress" style="height:20px">
+        <div class="progress-bar" style="width:90%;height:20px"><strong>Apache Tomcat</strong></div>
+      </div>
+      <br>
+      <h5>Tools</h5>   
+      <p>Eclipse SE, MyEclipse, Oracle 11g, SQL Developer, SQL plus, Dev C++</p>
+      <br>
     </div>
     <div id="aa" class="container tab-pane fade"><br>
       <h3>Academic Achievements</h3>
-      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+      <p>- Secured AIR 3669 in JEE ADVANCED, 2015 (Top 2.5%)</p>
+      <p>- Secured AIR 1949 in JEE MAINS, 2015 among 13 Lakh applicants (Top 0.2%)</p>
+      <p>- Secured 814 Rank in Telangana State EAMCET, 2015 among 12.5 Lakh applicants (Top 0.5%)</p>
+      <p>- MHRD Scholarship holder for all india below 2000 rank in JEE MAINS</p>
+      <p>- Eligible to Telangana State Govt. Scholarship with the Intermediate Board marks of 980 out of 1000 (98.0%)</p>
     </div>
   </div>
 
@@ -159,9 +220,19 @@ To work intensively in a challenging ambience with honesty, sincerity and integr
 
 </div>
 
-<div class="jumbotron text-center" style="margin-bottom:0">
-  <p>Footer</p>
-</div>
+<!-- Footer Start -->
+<footer class="text-muted" style="background: #d9d9d9">
+  <br><br>
+  <div class="container">
+    <p class="float-right">
+      <a href="#">Back to top</a>
+    </p>
+    <p>Album example is © Bootstrap, but please download and customize it for yourself!</p>
+    <p>New to Bootstrap? <a href="https://getbootstrap.com/">Visit the homepage</a> or read our <a href="/docs/4.3/getting-started/introduction/">getting started guide</a>.</p>
+  </div>
+  <br>
+</footer>
+<!-- Footer Ends -->
 
 </body>
 </html>
