--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <!-- Header Start -->
 <header>
-  <div class="bg-dark collapse show" id="navbarHeader" style="">
+  <div class="bg-dark collapse" id="navbarHeader" style="">
     <div class="container">
       <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
@@ -56,15 +56,7 @@
       <a href="#" class="btn btn-primary">Resume</a>
     </div>
   </div>
-  <br><br>  
-
-  <button type="button" class="btn btn-primary">
-    Profile Viewed by <span class="badge badge-light">4</span>
-  </button>
-  <br><br>
-  
-  <h4>Contact Details</h4>
-  <p>Mobile: +91 7075987720</p>
+  <br>
   
   </div>
   
@@ -221,14 +213,15 @@ To work intensively in a challenging ambience with honesty, sincerity and integr
 </div>
 
 <!-- Footer Start -->
-<footer class="text-muted" style="background: #d9d9d9">
+<footer class="text-muted" style="background: #f2f2f2">
   <br><br>
   <div class="container">
     <p class="float-right">
       <a href="#">Back to top</a>
     </p>
-    <p>Album example is © Bootstrap, but please download and customize it for yourself!</p>
-    <p>New to Bootstrap? <a href="https://getbootstrap.com/">Visit the homepage</a> or read our <a href="/docs/4.3/getting-started/introduction/">getting started guide</a>.</p>
+    <p>Copyrights owned by Revanth Vermareddy</p>
+    
+    <p>visit <a href="https://github.com/revanthvermareddy">github</a> or go back to top for contact info.</p>
   </div>
   <br>
 </footer>
