--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
           <h4 class="text-white">About</h4>
-          <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
+          <p class="text-muted">I'm a tech geek and love to code. I believe in honesty & hardwork. Passionate to work as a team. Had put a lot of efforts in building my portfolio, would highly appreciate if u encourage me by endorsing the skills mentioned in my linkedin.</p>
         </div>
         <div class="col-sm-4 offset-md-1 py-4">
           <h4 class="text-white">Contact</h4>
@@ -115,22 +115,24 @@ To work intensively in a challenging ambience with honesty, sincerity and integr
   
   <br>
   <!-- Nav tabs -->
-  <ul class="nav nav-tabs">
-    <li class="nav-item">
-      <a class="nav-link active" data-toggle="tab" href="#foi"><h6>Fields of Intrest</h6></a>
+  <ul class="nav">
+    <li class="nav-item col-sm-4">
+      <a class="nav-link active" data-toggle="tab" href="#foi"><h3>Fields of Intrest</h3></a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" href="#ts"><h6>Technical Skills</h6></a>
+    <li class="divider"></li>
+    <li class="nav-item col-sm-4">
+      <a class="nav-link" data-toggle="tab" href="#ts"><h3>Technical Skills</h3></a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" href="#aa"><h6>Academic Achievements</h6></a>
+    <li class="divider"></li>
+    <li class="nav-item col-sm-4">
+      <a class="nav-link" data-toggle="tab" href="#aa"><h3>Academic Achievements</h3></a>
     </li>
   </ul>
 
   <!-- Tab panes -->
   <div class="tab-content">
     <div id="foi" class="container tab-pane active"><br>
-      <h5>Fields of Intrest</h5>
+      <h4>Fields of Intrest</h4>
       <p>- Web Development<br>
          - App Development</p>
     </div>
@@ -145,7 +147,7 @@ To work intensively in a challenging ambience with honesty, sincerity and integr
       </div>
       <br>
       <div class="progress" style="height:20px">
-        <div class="progress-bar" style="width:70%;height:20px"><strong>C++</strong></div>
+        <div class="progress-bar" style="width:80%;height:20px"><strong>C++</strong></div>
       </div>
       <br>
       <h5>Java Technologies</h5>   
@@ -154,16 +156,16 @@ To work intensively in a challenging ambience with honesty, sincerity and integr
       </div>
       <br>
       <div class="progress" style="height:20px">
-        <div class="progress-bar" style="width:70%;height:20px"><strong>JDBC</strong></div>
+        <div class="progress-bar" style="width:90%;height:20px"><strong>JDBC</strong></div>
       </div>
       <br>
       <div class="progress" style="height:20px">
-        <div class="progress-bar" style="width:70%;height:20px"><strong>JSP</strong></div>
+        <div class="progress-bar" style="width:50%;height:20px"><strong>JSP</strong></div>
       </div>
       <br>
       <h5>Web Frameworks</h5>   
       <div class="progress" style="height:20px">
-        <div class="progress-bar" style="width:80%;height:20px"><strong>Bootstrap</strong></div>
+        <div class="progress-bar" style="width:75%;height:20px"><strong>Bootstrap</strong></div>
       </div>
       <br>
       <h5>Mark-Up Languages</h5>   
@@ -177,21 +179,21 @@ To work intensively in a challenging ambience with honesty, sincerity and integr
       <br>
       <h5>Database</h5>   
       <div class="progress" style="height:20px">
-        <div class="progress-bar" style="width:90%;height:20px"><strong>Oracle (SQL, PL/SQL)</strong></div>
+        <div class="progress-bar" style="width:85%;height:20px"><strong>Oracle (SQL, PL/SQL)</strong></div>
       </div>
       <br>
       <h5>Cloud Services</h5>   
       <div class="progress" style="height:20px">
-        <div class="progress-bar" style="width:90%;height:20px"><strong>AWS</strong></div>
+        <div class="progress-bar" style="width:60%;height:20px"><strong>AWS</strong></div>
       </div>
       <br>
       <div class="progress" style="height:20px">
-        <div class="progress-bar" style="width:90%;height:20px"><strong>GCP</strong></div>
+        <div class="progress-bar" style="width:40%;height:20px"><strong>GCP</strong></div>
       </div>
       <br>
       <h5>Web/App Services</h5>   
       <div class="progress" style="height:20px">
-        <div class="progress-bar" style="width:90%;height:20px"><strong>Apache Tomcat</strong></div>
+        <div class="progress-bar" style="width:80%;height:20px"><strong>Apache Tomcat</strong></div>
       </div>
       <br>
       <h5>Tools</h5>   
@@ -200,9 +202,9 @@ To work intensively in a challenging ambience with honesty, sincerity and integr
     </div>
     <div id="aa" class="container tab-pane fade"><br>
       <h3>Academic Achievements</h3>
-      <p>- Secured AIR 3669 in JEE ADVANCED, 2015 (Top 2.5%)</p>
-      <p>- Secured AIR 1949 in JEE MAINS, 2015 among 13 Lakh applicants (Top 0.2%)</p>
-      <p>- Secured 814 Rank in Telangana State EAMCET, 2015 among 12.5 Lakh applicants (Top 0.5%)</p>
+      <p>- Secured <strong>AIR 3669</strong> in JEE ADVANCED, 2015 (Top 2.5%)</p>
+      <p>- Secured <strong>AIR 1949</strong> in JEE MAINS, 2015 among 13 Lakh applicants (Top 0.2%)</p>
+      <p>- Secured <strong>State 814 Rank</strong> in Telangana State EAMCET, 2015 among 12.5 Lakh applicants (Top 0.5%)</p>
       <p>- MHRD Scholarship holder for all india below 2000 rank in JEE MAINS</p>
       <p>- Eligible to Telangana State Govt. Scholarship with the Intermediate Board marks of 980 out of 1000 (98.0%)</p>
     </div>
@@ -221,7 +223,7 @@ To work intensively in a challenging ambience with honesty, sincerity and integr
     </p>
     <p>Copyrights owned by Revanth Vermareddy</p>
     
-    <p>visit <a href="https://github.com/revanthvermareddy">github</a> or go back to top for contact info.</p>
+    <p>visit <a href="https://github.com/revanthvermareddy">github</a> or go back to top for contacting me</p>
   </div>
   <br>
 </footer>
