--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ To work intensively in a challenging ambience with honesty, sincerity and integr
       <br>
     </div>
     <div id="aa" class="container tab-pane fade"><br>
-      <h3>Academic Achievements</h3>
+      <h4>Acad. Achievements</h4>
       <p>- Secured <strong>AIR 3669</strong> in JEE ADVANCED, 2015 (Top 2.5%)</p>
       <p>- Secured <strong>AIR 1949</strong> in JEE MAINS, 2015 among 13 Lakh applicants (Top 0.2%)</p>
       <p>- Secured <strong>State 814 Rank</strong> in Telangana State EAMCET, 2015 among 12.5 Lakh applicants (Top 0.5%)</p>
