--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ To work intensively in a challenging ambience with honesty, sincerity and integr
   <!-- Nav tabs -->
   <ul class="nav">
     <li class="nav-item col-sm-4">
-      <a class="nav-link active" data-toggle="tab" href="#foi"><h3>Fields of Intrest</h3></a>
+      <a class="nav-link active" data-toggle="tab" href="#foi"><h3>Fields of Interest</h3></a>
     </li>
     <li class="divider"></li>
     <li class="nav-item col-sm-4">
@@ -132,7 +132,7 @@ To work intensively in a challenging ambience with honesty, sincerity and integr
   <!-- Tab panes -->
   <div class="tab-content">
     <div id="foi" class="container tab-pane active"><br>
-      <h4>Fields of Intrest</h4>
+      <h4>Fields of Interest</h4>
       <p>- Web Development<br>
          - App Development</p>
     </div>
