add google analytics

--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147573881-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-147573881-1');
+  </script>
+
   <title>Revanth Portfolio</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -76,157 +86,161 @@
 <!-- Jumbotron Ends -->
 
 <div class="container" id="details">
-<br><br>
-<h3>Academic Details</h3>
-<div class="table-responsive-sm"> 
-<table class="table">
-    <thead class="thead-dark">
-      <tr>
-        <th>Education</th>
-        <th>Institute</th>
-        <th>Location</th>
-        <th>Year</th>
-        <th>CPI%</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>B.Tech (ECE)</td>
-        <td>NIT Warangal</td>
-        <td>Warangal</td>
-        <td>2015-2019</td>
-        <td>7.25</td>
-      </tr>
-      <tr>
-        <td>Intermediate</td>
-        <td>Narayana Jr. College</td>
-        <td>Hyderabad</td>
-        <td>2013-2015</td>
-        <td>98.0%</td>
-      </tr>
-      <tr>
-        <td>SSC</td>
-        <td>New Vision The Olympiad School</td>
-        <td>Khammam</td>
-        <td>2013</td>
-        <td>9.7</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-<br>
-
-<h3>Career Objective</h3>
-<p>
-Looking for an opportunity to acquire knowledge through the work I do
-and use my skills for both organizational and individual development by
-integrating and applying knowledge gained through education and vision.
-To work intensively in a challenging ambience with honesty, sincerity and integrity.
-</p>
-
-<!-- Tab Starts -->
-  
-  <br>
-  <!-- Nav tabs -->
-  <ul class="nav">
-    <li class="nav-item col-sm-4">
-      <a class="nav-link active" data-toggle="tab" href="#foi"><h3>Fields of Interest</h3></a>
-    </li>
-    <li class="divider"></li>
-    <li class="nav-item col-sm-4">
-      <a class="nav-link" data-toggle="tab" href="#ts"><h3>Technical Skills</h3></a>
-    </li>
-    <li class="divider"></li>
-    <li class="nav-item col-sm-4">
-      <a class="nav-link" data-toggle="tab" href="#aa"><h3>Acad Achievements</h3></a>
-    </li>
-  </ul>
-
-  <!-- Tab panes -->
-  <div class="tab-content">
-    <div id="foi" class="container tab-pane active"><br>
-      <h4>Fields of Interest</h4>
-      <p>- Web Development<br>
-         - App Development</p>
-    </div>
-    <div id="ts" class="container tab-pane fade"><br>
-      <h5>Programming Languages</h5>
- 
-      <div class="progress" style="height:20px">
-        <div class="progress-bar" style="width:90%;height:20px"><strong>JAVA</strong></div>
-      </div>
-      <br>
-      <div class="progress" style="height:20px">
-        <div class="progress-bar" style="width:70%;height:20px"><strong>Python</strong></div>
-      </div>
-      <br>
-      <div class="progress" style="height:20px">
-        <div class="progress-bar" style="width:80%;height:20px"><strong>C++</strong></div>
-      </div>
-      <br>
-      <h5>Java Technologies</h5>   
-      <div class="progress" style="height:20px">
-        <div class="progress-bar" style="width:90%;height:20px"><strong>Servlets</strong></div>
-      </div>
-      <br>
-      <div class="progress" style="height:20px">
-        <div class="progress-bar" style="width:90%;height:20px"><strong>JDBC</strong></div>
-      </div>
-      <br>
-      <div class="progress" style="height:20px">
-        <div class="progress-bar" style="width:50%;height:20px"><strong>JSP</strong></div>
-      </div>
-      <br>
-      <h5>Web Frameworks</h5>   
-      <div class="progress" style="height:20px">
-        <div class="progress-bar" style="width:75%;height:20px"><strong>Bootstrap</strong></div>
-      </div>
-      <br>
-      <h5>Mark-Up Languages</h5>   
-      <div class="progress" style="height:20px">
-        <div class="progress-bar" style="width:90%;height:20px"><strong>HTML 5</strong></div>
-      </div>
-      <br>
-      <div class="progress" style="height:20px">
-        <div class="progress-bar" style="width:60%;height:20px"><strong>CSS</strong></div>
-      </div>
-      <br>
-      <h5>Database</h5>   
-      <div class="progress" style="height:20px">
-        <div class="progress-bar" style="width:85%;height:20px"><strong>Oracle (SQL, PL/SQL)</strong></div>
-      </div>
-      <br>
-      <h5>Cloud Services</h5>   
-      <div class="progress" style="height:20px">
-        <div class="progress-bar" style="width:60%;height:20px"><strong>AWS</strong></div>
-      </div>
-      <br>
-      <div class="progress" style="height:20px">
-        <div class="progress-bar" style="width:40%;height:20px"><strong>GCP</strong></div>
-      </div>
-      <br>
-      <h5>Web/App Services</h5>   
-      <div class="progress" style="height:20px">
-        <div class="progress-bar" style="width:80%;height:20px"><strong>Apache Tomcat</strong></div>
-      </div>
-      <br>
-      <h5>Tools</h5>   
-      <p>Eclipse SE, MyEclipse, Oracle 11g, SQL Developer, SQL plus, Dev C++</p>
-      <br>
-    </div>
-    <div id="aa" class="container tab-pane fade"><br>
-      <h4>Academic Achievements</h4>
-      <p>- Secured <strong>AIR 3669</strong> in JEE ADVANCED, 2015 (Top 2.5%)</p>
-      <p>- Secured <strong>AIR 1949</strong> in JEE MAINS, 2015 among 13 Lakh applicants (Top 0.2%)</p>
-      <p>- Secured <strong>State 814 Rank</strong> in Telangana State EAMCET, 2015 among 12.5 Lakh applicants (Top 0.5%)</p>
-      <p>- MHRD Scholarship holder for all india below 2000 rank in JEE MAINS</p>
-      <p>- Eligible to Telangana State Govt. Scholarship with the Intermediate Board marks of 980 out of 1000 (98.0%)</p>
-    </div>
+  <br><br>
+  <h3>Academic Details</h3>
+  <div class="table-responsive-sm"> 
+  <table class="table">
+      <thead class="thead-dark">
+        <tr>
+          <th>Education</th>
+          <th>Institute</th>
+          <th>Location</th>
+          <th>Year</th>
+          <th>CPI%</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>B.Tech (ECE)</td>
+          <td>NIT Warangal</td>
+          <td>Warangal</td>
+          <td>2015-2019</td>
+          <td>7.25</td>
+        </tr>
+        <tr>
+          <td>Intermediate</td>
+          <td>Narayana Jr. College</td>
+          <td>Hyderabad</td>
+          <td>2013-2015</td>
+          <td>98.0%</td>
+        </tr>
+        <tr>
+          <td>SSC</td>
+          <td>New Vision The Olympiad School</td>
+          <td>Khammam</td>
+          <td>2013</td>
+          <td>9.7</td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 
-<!-- Tab Ends -->
+  <br>
+
+  <h3>Career Objective</h3>
+  <p>
+  Looking for an opportunity to acquire knowledge through the work I do
+  and use my skills for both organizational and individual development by
+  integrating and applying knowledge gained through education and vision.
+  To work intensively in a challenging ambience with honesty, sincerity and integrity.
+  </p>
+
+  <!-- Tab Starts -->
+    
+    <br>
+    <!-- Nav tabs -->
+    <ul class="nav">
+      <li class="nav-item col-sm-4">
+        <a class="nav-link active" data-toggle="tab" href="#foi"><h3>Fields of Interest</h3></a>
+      </li>
+      <li class="divider"></li>
+      <li class="nav-item col-sm-4">
+        <a class="nav-link" data-toggle="tab" href="#ts"><h3>Technical Skills</h3></a>
+      </li>
+      <li class="divider"></li>
+      <li class="nav-item col-sm-4">
+        <a class="nav-link" data-toggle="tab" href="#aa"><h3>Acad Achievements</h3></a>
+      </li>
+    </ul>
+
+    <!-- Tab panes -->
+    <div class="tab-content">
+      <div id="foi" class="container tab-pane active"><br>
+        <h4>Fields of Interest</h4>
+        <p>- Web Development<br>
+          - App Development</p>
+      </div>
+      <div id="ts" class="container tab-pane fade"><br>
+        <h5>Programming Languages</h5>
+  
+        <div class="progress" style="height:20px">
+          <div class="progress-bar" style="width:90%;height:20px"><strong>JAVA</strong></div>
+        </div>
+        <br>
+        <div class="progress" style="height:20px">
+          <div class="progress-bar" style="width:70%;height:20px"><strong>Python</strong></div>
+        </div>
+        <br>
+        <div class="progress" style="height:20px">
+          <div class="progress-bar" style="width:80%;height:20px"><strong>C++</strong></div>
+        </div>
+        <br>
+        <h5>Java Technologies</h5>   
+        <div class="progress" style="height:20px">
+          <div class="progress-bar" style="width:90%;height:20px"><strong>Servlets</strong></div>
+        </div>
+        <br>
+        <div class="progress" style="height:20px">
+          <div class="progress-bar" style="width:90%;height:20px"><strong>JDBC</strong></div>
+        </div>
+        <br>
+        <div class="progress" style="height:20px">
+          <div class="progress-bar" style="width:50%;height:20px"><strong>JSP</strong></div>
+        </div>
+        <br>
+        <h5>Web Frameworks</h5>   
+        <div class="progress" style="height:20px">
+          <div class="progress-bar" style="width:75%;height:20px"><strong>Bootstrap</strong></div>
+        </div>
+        <br>
+        <h5>Mark-Up Languages</h5>   
+        <div class="progress" style="height:20px">
+          <div class="progress-bar" style="width:90%;height:20px"><strong>HTML 5</strong></div>
+        </div>
+        <br>
+        <div class="progress" style="height:20px">
+          <div class="progress-bar" style="width:60%;height:20px"><strong>CSS</strong></div>
+        </div>
+        <br>
+        <h5>Database</h5>   
+        <div class="progress" style="height:20px">
+          <div class="progress-bar" style="width:85%;height:20px"><strong>Oracle (SQL, PL/SQL)</strong></div>
+        </div>
+        <br>
+        <h5>Cloud Services</h5>   
+        <div class="progress" style="height:20px">
+          <div class="progress-bar" style="width:60%;height:20px"><strong>AWS</strong></div>
+        </div>
+        <br>
+        <div class="progress" style="height:20px">
+          <div class="progress-bar" style="width:40%;height:20px"><strong>GCP</strong></div>
+        </div>
+        <br>
+        <h5>Web/App Services</h5>   
+        <div class="progress" style="height:20px">
+          <div class="progress-bar" style="width:80%;height:20px"><strong>Apache Tomcat</strong></div>
+        </div>
+        <br>
+        <h5>Tools</h5>   
+        <p>Eclipse SE, MyEclipse, Oracle 11g, SQL Developer, SQL plus, Dev C++</p>
+        <br>
+      </div>
+      <div id="aa" class="container tab-pane fade"><br>
+        <h4>Academic Achievements</h4>
+        <p>- Secured <strong>AIR 3669</strong> in JEE ADVANCED, 2015 (Top 2.5%)</p>
+        <p>- Secured <strong>AIR 1949</strong> in JEE MAINS, 2015 among 13 Lakh applicants (Top 0.2%)</p>
+        <p>- Secured <strong>State 814 Rank</strong> in Telangana State EAMCET, 2015 among 12.5 Lakh applicants (Top 0.5%)</p>
+        <p>- MHRD Scholarship holder for all india below 2000 rank in JEE MAINS</p>
+        <p>- Eligible to Telangana State Govt. Scholarship with the Intermediate Board marks of 980 out of 1000 (98.0%)</p>
+      </div>
+    </div>
+
+  <!-- Tab Ends -->
 
 </div>
+
+
+
 
 <!-- Footer Start -->
 <footer>
@@ -260,3 +274,4 @@ To work intensively in a challenging ambience with honesty, sincerity and integr
 
 </body>
 </html>
+<
