Updated UI padding

--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
     gtag('config', 'UA-147573881-1');
   </script>
 
-  <title>Revanth Portfolio</title>
+  <title>Revanth Vermareddy</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <!-- Custom Fontawesome and Styling Start -->
-  <link rel="stylesheet" href="CSS/style.css">
-  <script src="https://kit.fontawesome.com/6bcbe86f82.js"></script>
-  <!-- Custom Fontawesome and Styling End -->
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+  <!-- Custom Fontawesome and Styling Start -->
+  <link rel="stylesheet" href="CSS/style.css">
+  <script src="https://kit.fontawesome.com/6bcbe86f82.js"></script>
+  <!-- Custom Fontawesome and Styling End -->
 </head>
 <body>
 
@@ -156,7 +156,7 @@
     <!-- Tab panes -->
     <div class="tab-content">
       <div id="foi" class="container tab-pane active"><br>
-        <h4>Fields of Interest</h4>
+        <h4>Fields of Interest</h4><br>
         <p>- Data Science<br>
           - Machine Learning<br>
           - Artificial Intelligence</p>
@@ -164,9 +164,10 @@
       </div>
 
       <div id="ts" class="container tab-pane fade"><br>
+      <h4>Technical Skills</h4>
 
       <div class="row">
-        <div class="col-sm-4">
+        <div class="col-sm-4"><br>
           <h5>Programming Languages</h5>
           <div class="progress">
             <div class="progress-bar" style="width:90%"><strong>JAVA</strong></div>
@@ -180,8 +181,8 @@
             <div class="progress-bar" style="width:80%"><strong>C++</strong></div>
           </div>
         </div>
-
-        <div class="col-sm-4">
+        
+        <div class="col-sm-4"><br>
           <h5>Java Technologies</h5>
           <div class="progress">
             <div class="progress-bar" style="width:90%"><strong>Servlets</strong></div>
@@ -196,7 +197,7 @@
           </div>
         </div>
 
-        <div class="col-sm-4">
+        <div class="col-sm-4"><br>
           <h5>Web Frameworks</h5>
           <div class="progress">
             <div class="progress-bar" style="width:80%"><strong>Angular</strong></div>
@@ -210,8 +211,8 @@
       <br>
       
       <div class="row">
-        <div class="col-sm-4">
-          <h5>Mark-Up Languages</h5>   
+        <div class="col-sm-4"><br>
+          <h5>Mark-Up Languages</h5> 
           <div class="progress">
             <div class="progress-bar" style="width:90%"><strong>HTML 5</strong></div>
           </div>
@@ -221,15 +222,15 @@
           </div>
         </div>
 
-        <div class="col-sm-4">
-          <h5>Database</h5>   
+        <div class="col-sm-4"><br>
+          <h5>Database</h5> 
           <div class="progress">
             <div class="progress-bar" style="width:85%"><strong>Oracle (SQL, PL/SQL)</strong></div>
           </div>
         </div>
 
-        <div class="col-sm-4">
-          <h5>Cloud Services</h5>   
+        <div class="col-sm-4"><br>
+          <h5>Cloud Services</h5>  
           <div class="progress">
             <div class="progress-bar" style="width:60%"><strong>AWS</strong></div>
           </div>
@@ -242,15 +243,15 @@
       <br>
 
       <div class="row">
-        <div class="col-sm-4">
-          <h5>Web/App Services</h5>   
+        <div class="col-sm-4"><br>
+          <h5>Web/App Services</h5>  
           <div class="progress">
             <div class="progress-bar" style="width:80%"><strong>Apache Tomcat</strong></div>
           </div>
         </div>
 
-        <div class="col-sm-8">
-          <h5>Tools</h5>   
+        <div class="col-sm-8"><br>
+          <h5>Tools</h5>  
           <p>Eclipse SE, MyEclipse, Oracle 11g, SQL Developer, SQL plus, Dev C++</p>
         </div>
 
@@ -264,7 +265,7 @@
       </div>
 
       <div id="aa" class="container tab-pane fade"><br>
-        <h4>Academic Achievements</h4>
+        <h4>Academic Achievements</h4><br>
         <p>- Secured <strong>AIR 3669</strong> in JEE ADVANCED, 2015 (Top 2.5%)</p>
         <p>- Secured <strong>AIR 1949</strong> in JEE MAINS, 2015 among 13 Lakh applicants (Top 0.2%)</p>
         <p>- Secured <strong>State 814 Rank</strong> in Telangana State EAMCET, 2015 among 12.5 Lakh applicants (Top 0.5%)</p>
