--- a/index.html
+++ b/index.html
@@ -29,30 +29,30 @@
 
 <!-- Header Start -->
 <header>
-  <div class="bg-dark collapse" id="navbarHeader">
+  <div class="collapse" id="navbarHeader">
     <div class="container">
       <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
-          <h4 class="text-white">About</h4>
+          <h4>About</h4>
           <p class="text-muted">I'm a tech geek and love to code.<br>I believe in honesty & hard work.<br>Passionate to work as a team.</p>
         </div>
         <div class="col-sm-4 offset-md-1 py-4">
-          <h4 class="text-white" id="navcontact">Contact</h4>
+          <h4 id="navcontact">Contact</h4>
           <ul class="list-unstyled smed">
-            <li><a href="https://www.twitter.com/RevanthVerma007" class="text-white"><i class="fab fa-twitter"></i> Twitter</a></li>
-            <li><a href="https://www.facebook.com/verma.rev" class="text-white"><i class="fab fa-facebook"></i> Facebook</a></li>
-            <li><a href="https://www.linkedin.com/in/vermareddyrevanth" class="text-white"><i class="fab fa-linkedin-in"></i> Linkedin</a></li>
+            <li><a href="https://www.twitter.com/RevanthVerma007"><i class="fab fa-twitter"></i> Twitter</a></li>
+            <li><a href="https://www.facebook.com/verma.rev"><i class="fab fa-facebook"></i> Facebook</a></li>
+            <li><a href="https://www.linkedin.com/in/vermareddyrevanth"><i class="fab fa-linkedin-in"></i> Linkedin</a></li>
           </ul>
         </div>
       </div>
     </div>
   </div>
-  <div class="navbar navbar-dark bg-dark shadow-sm" id="nav">
+  <div class="navbar shadow-sm" id="nav">
     <div class="container d-flex justify-content-between">
       <a href="#" class="navbar-brand d-flex align-items-center" id="mybrand">
         <strong>Revanth Vermareddy</strong>
       </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="true" aria-label="Toggle navigation">
+      <button class="navbar-light navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="true" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
     </div>
@@ -70,10 +70,17 @@
   <div class="container" id="card-container">
     <br>
     <div class="card" style="width:300px">
-      <img class="card-img-top" src="images/Revanth.jpg" alt="Card image" style="width:100%">
+      <!-- 
+        <img class="card-img-top" src="images/Revanth.jpg" alt="Card image" style="width:100%"> 
+        mr-3 mt-3 rounded-circle
+      -->
+      <div class="circular-landscape">
+        <img class="" src="images/Revanth.jpg" alt="Card image" style="width:100%">
+      </div>
       <div class="card-body">
         <h4 class="card-title">Revanth Vermareddy</h4>
-        <p class="card-text">Executive Graduate Trainee at Fidelity Investments</p>
+        <hr>
+        <p class="card-text">Software Development Engineer at Fidelity Investments</p>
         <a href="#" class="btn btn-primary">Resume</a>
       </div>
     </div>
@@ -81,7 +88,7 @@
     
   </div>
   <br>
-  
+
 </div>
 <!-- Jumbotron Ends -->
 
@@ -174,7 +181,7 @@
           </div>
           <br>
           <div class="progress">
-            <div class="progress-bar" style="width:70%"><strong>Python</strong></div>
+            <div class="progress-bar" style="width:90%"><strong>Python</strong></div>
           </div>
           <br>
           <div class="progress">
@@ -183,22 +190,22 @@
         </div>
         
         <div class="col-sm-4"><br>
-          <h5>Java Technologies</h5>
+          <h5>Web Dev</h5>
           <div class="progress">
-            <div class="progress-bar" style="width:90%"><strong>Servlets</strong></div>
+            <div class="progress-bar" style="width:75%"><strong>Springboot</strong></div>
           </div>
           <br>
           <div class="progress">
-            <div class="progress-bar" style="width:90%"><strong>JDBC</strong></div>
+            <div class="progress-bar" style="width:60%"><strong>Node</strong></div>
           </div>
           <br>
           <div class="progress">
-            <div class="progress-bar" style="width:50%"><strong>JSP</strong></div>
+            <div class="progress-bar" style="width:50%"><strong>Flask</strong></div>
           </div>
         </div>
 
         <div class="col-sm-4"><br>
-          <h5>Web Frameworks</h5>
+          <h5>UI Frameworks</h5>
           <div class="progress">
             <div class="progress-bar" style="width:80%"><strong>Angular</strong></div>
           </div>
@@ -218,7 +225,7 @@
           </div>
           <br>
           <div class="progress">
-            <div class="progress-bar" style="width:60%"><strong>CSS 3</strong></div>
+            <div class="progress-bar" style="width:80%"><strong>CSS 3</strong></div>
           </div>
         </div>
 
