made top links bold

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <div class="col-sm-4 offset-md-1 py-4">
           <h4 id="navcontact">Contact</h4>
           <ul class="list-unstyled smed">
-            <li><a href="https://www.twitter.com/RevanthVerma007"><i class="fab fa-twitter"></i> Twitter</a></li>
-            <li><a href="https://www.facebook.com/verma.rev"><i class="fab fa-facebook"></i> Facebook</a></li>
-            <li><a href="https://www.linkedin.com/in/vermareddyrevanth"><i class="fab fa-linkedin-in"></i> Linkedin</a></li>
+            <li><a href="https://www.twitter.com/RevanthVerma007"><i class="fab fa-twitter"></i> <b>Twitter</b></a></li>
+            <li><a href="https://www.facebook.com/verma.rev"><i class="fab fa-facebook"></i> <b>Facebook</b></a></li>
+            <li><a href="https://www.linkedin.com/in/vermareddyrevanth"><i class="fab fa-linkedin-in"></i> <b>Linkedin</b></a></li>
           </ul>
         </div>
       </div>
