added missed FOI emoji

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     <!-- Tab panes -->
     <div class="tab-content">
       <div id="foi" class="container tab-pane active"><br>
-        <h4>Fields of Interest</h4><br>
+        <h4>Fields of Interest 🔎</h4><br>
         <p>
           <i class="fas fa-angle-right"></i> Data Science<br>
           <i class="fas fa-angle-right"></i> Machine Learning<br>
